[package]
name = "xterm-js"
version = "0.1.0"
authors = ["Klas Segeljakt <klasseg@kth.se>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
xterm-addon-attach    = ["web-sys/WebSocket"]
xterm-addon-fit       = []
xterm-addon-ligatures = []
xterm-addon-search    = []
xterm-addon-serialize = []
xterm-addon-unicode11 = []
xterm-addon-web-links = []
xterm-addon-webgl     = ["web-sys/HtmlCanvasElement"]

[dependencies]
wasm-bindgen = "0.2.62"
js-sys = "0.3.39"
web-sys = { version = "0.3.39", features = ["HtmlElement", "HtmlTextAreaElement", "KeyboardEvent", "MouseEvent"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.12"

[profile.release]
opt-level = "s"
