[package]
name          = "xterm-js-rs"
version       = "0.1.1"
homepage      = "https://github.com/segeljakt/xterm-js-rs/"
repository    = "https://github.com/segeljakt/xterm-js-rs/"
readme        = "README.md"
description   = "Rust-WASM bindings for the xterm-js Javascript library"
authors       = ["Klas Segeljakt <klasseg@kth.se>"]
edition       = "2018"
license       = "MIT"
keywords      = ["cli", "web", "wasm", "javascript"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
xterm-addon-attach    = ["web-sys/WebSocket"]
xterm-addon-fit       = []
xterm-addon-ligatures = []
xterm-addon-search    = []
xterm-addon-serialize = []
xterm-addon-unicode11 = []
xterm-addon-web-links = []
xterm-addon-webgl     = ["web-sys/HtmlCanvasElement"]

[dependencies]
wasm-bindgen = "0.2.62"
js-sys = "0.3.39"
web-sys = { version = "0.3.39", features = ["HtmlElement", "HtmlTextAreaElement", "KeyboardEvent", "MouseEvent"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.12"

[profile.release]
opt-level = "s"
